--- a/themes/even/templates/index.html
+++ b/themes/even/templates/index.html
@@ -8,8 +8,10 @@
 
       <!-- Enable responsiveness on mobile devices-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-
       <title>{% block title %}{{ config.title }}{% endblock title %}</title>
+      <link rel="icon" href="{{config.base_url}}/favicon.ico" type="image/x-icon">
+       <link rel="shortcut icon" href="{{config.base_url}}/favicon.ico" type="image/x-icon">
+
 
       {% if config.generate_feed %}
         <link rel="alternate" type={% if config.feed_filename == "atom.xml" %}"application/atom+xml"{% else %}"application/rss+xml"{% endif %} title="RSS" href="{{ get_url(path=config.feed_filename) | safe }}">
@@ -123,7 +125,7 @@
                     <img src="{{config.base_url}}/icons/twitter.svg" style="width: 26px;" />
                 </a>
                 <a href="mailto:huaiyugong123@gmail.com">&nbsp;&nbsp;
-                    <img src="{{config.base_url}}/icons/gmail.svg" style="width: 26px;" />
+                    <img src="{{config.base_url}}/icons/gmail.svg" style="width: 25px;" />
                 </a>
                 <!--a target="_blank" href="https://github.com/jialugong"><span><iframe src="{{config.base_url}}/icons/github.svg"></iframe></span></a-->
                 <!-- Powered by <a target="_blank" href="https://getzola.com/">Zola</a>, Theme <a target="_blank"
