--- a/themes/even/sass/site.scss
+++ b/themes/even/sass/site.scss
@@ -8,6 +8,23 @@ $theme-color-map: (
   'Dark Violet': #9932CC #f5f4fa
 );
 
+$light-theme-color-map: (
+  'Default': #c05b4d #f8f5ec,
+  'Mint Green': #16982B #f5f5f5,
+  'Cobalt Blue': #0047AB #f0f2f5,
+  'Hot Pink': #FF69B4 #f8f5f5,
+  'Dark Violet': #9932CC #f5f4fa
+);
+
+$dark-theme-color-map:(
+  'Default':#36b0ba #0e1e25,
+  'Mint Green': #16982B #f5f5f5,
+  'Cobalt Blue': #0047AB #f0f2f5,
+  'Hot Pink': #FF69B4 #f8f5f5,
+  'Dark Violet': #9932CC #f5f4fa
+);
+
+
 // TODO: allow to change that
 $main-colour: #c05b4d;
 $secondary-colour: #f8f5ec;
