fix:fix some typo

--- a/themes/even/templates/index.html
+++ b/themes/even/templates/index.html
@@ -118,7 +118,7 @@
             </p>
             <p style="margin-top:20px;padding-top:30px;">
                 © {{ config.title }} {{ now() | date(format="%Y") }}<br>
-                Authour <a target="_blank" href="https://fourstacks.codes">Huaiyu Gong</a>
+                Author <a target="_blank" href="https://fourstacks.codes">Huaiyu Gong</a>
                 <a href="https://github.com/JialuGong">&nbsp;&nbsp;
                     <img src="{{config.base_url}}/icons/github.svg" style="width: 24px;"/>
                 </a>
